--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ footer {
   .navbar{
     font-size: 20px;
     padding: 60px;
-    background-image: url(img/BackGround-KampungMahmud.jpg);
+    background-image: url(./img/BackGround-KampungMahmud.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
